# project2_bednyakov_M25-555

./: .gitignore  README.md  pyproject.toml
data/: tables
src/: decorators.py
src/primitive_db/: core.py  engine.py  main.py  utils.py
