[project]
name = "project2-bednyakov-m25-555"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name = "MrGuss",email = "bednyakov04@mail.ru"}
]
requires-python = ">=3.10"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120 # I prefer 120, and 88 is not pep8 compliant too
target-version = "py310"
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.poetry.scripts]
project = "src.primitive_db.main:main" 
[dependency-groups]
dev = [
    "ruff (>=0.14.5,<0.15.0)"
]
